# self-libcamera-trial

./: .gitignore  CMakeLists.txt  main.cpp
inc/: multicam.h
src/: event_loop.cpp  main.cpp  onecam_capture.cpp  onecam_frame.cpp  simple_cam.cpp
